# call_your_mom

./: .gitignore  Dockerfile  LICENSE.txt  Pipfile  README.md  pyproject.toml
.circleci/: config.yml
.github/workflows/: test.yml
call_your_mom/: admin.py  apps.py  auth.py  models.py  tests.py  urls.py  views.py
call_your_mom/fixtures/: test.json
call_your_mom/locale/cs_CZ/LC_MESSAGES/: django.mo  django.po
call_your_mom/locale/fr/LC_MESSAGES/: django.po
call_your_mom/management/commands/: send_reminders.py
call_your_mom/migrations/: 0001_initial.py  0002_cymuser_language.py  0003_cymuser_timezone.py
call_your_mom/static/: main.css
call_your_mom/templates/call_your_mom/: ack_task.html  acknowledge_task.html  base.html  change_task.html  confirm.html  email_base.html  email_login.html  email_register.html  email_reminder.html  landing.html  login.html  profile.html  register.html
website/: settings.py  settings.py.sample  urls.py  wsgi.py
