[tool.poetry]
name = "call_your_mom"
version = "0.4"
description = "Web application reminding you of periodic tasks"
authors = ["Remi Rampin <remirampin@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6"
django = "~2.2"
django-model-utils = "~3.1.0"
python-dateutil = "~2.7"

[tool.poetry.dev-dependencies]
flake8 = "*"
unittest-xml-reporting = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
